--- a/view/login.ui
+++ b/view/login.ui
@@ -165,6 +165,13 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <item>
+        <widget class="QLabel" name="lbl_GIF">
+         <property name="text">
+          <string>GIF</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="horizontalSpacer_4">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
