Penambahan Grafik HighStock

--- a/sarasvati.qrc
+++ b/sarasvati.qrc
@@ -6,10 +6,14 @@
         <file>images/loading.gif</file>
         <file>images/settings.png</file>
         <file>images/icon-daun-biru.png</file>
-        <file>map/gmap.html</file>
         <file>images/loading-mini-circle.gif</file>
         <file>images/loadig-bar.gif</file>
         <file>images/arrow.png</file>
         <file>images/arrow-2.png</file>
+        <file>html/gmap.html</file>
+        <file>html/graph.html</file>
+	<file>html/js/jquery.min.js</file>
+	<file>html/js/highstock.js</file>
+	<file>html/js/exporting.js</file>
     </qresource>
 </RCC>
