--- a/view/mainwindow.ui
+++ b/view/mainwindow.ui
@@ -112,6 +112,18 @@ QPushButton:hover {
            <attribute name="title">
             <string>HMI</string>
            </attribute>
+           <layout class="QGridLayout" name="gridLayout_13">
+            <item row="0" column="0">
+             <widget class="QWebEngineView" name="webHMI" native="true">
+              <property name="minimumSize">
+               <size>
+                <width>500</width>
+                <height>300</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </widget>
          </widget>
         </item>
